--- a/config.yml
+++ b/config.yml
@@ -1,2 +1,3 @@
-google: Jen Diamond
-definition: work in progress
+google: ['Jen Diamond', 'Lars Lehtonen', 'Pivotal Labs', 'Thanksgiving']
+definition:
+  wip: work in progress
