--- a/config.yml
+++ b/config.yml
@@ -1,3 +1,3 @@
-google: ['Jen Diamond', 'Lars Lehtonen', 'Pivotal Labs', 'Thanksgiving']
+google: ['booth', 'Christmas']
 definition:
-  wip: work in progress
+ - yak shaving - a process
